amened removeFirst&Last